--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -11,6 +11,16 @@
 				&nbsp;
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-12 d-flex justify-content-center">
+				<h5>Vaccini consegnati alle Regioni</h5>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				&nbsp;
+			</div>
+		</div>
 		<div class="row" id="rowRegionVaccines"></div>
 		<div class="row">
 			<div class="col-12">
@@ -20,6 +30,16 @@
 		<div class="row">
 			<div class="col-lg-12 col-xl-8">
 				<canvas id="chartVaccinesDelivered"></canvas>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				&nbsp;
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 d-flex justify-content-center">
+				<h5>Persone Vaccinate</h5>
 			</div>
 		</div>
 		<div class="row">
