--- a/src/main/resources/templates/fragments/tabProvinceData.html
+++ b/src/main/resources/templates/fragments/tabProvinceData.html
@@ -7,32 +7,37 @@
 
 <div class="tab-pane fade" id="nav-province" role="tabpanel" aria-labelledby="nav-contact-tab">
 	<div class="container-fluid">
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
-			<div class="col-12">
-				&nbsp;
+			<div class="col-12 d-flex justify-content-center">
+				<h5>Nuove infezioni per provincia</h5>
 			</div>
 		</div>
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
-			<div class="col-lg-12 col-xl-8">
-				<div class="input-group input-group-sm">
-					<div class="input-group-prepend">
-						<span class="input-group-text">Province Regione</span>
+			<div class="col-12">
+				<div class="row">
+					<div class="col-lg-12 col-xl-4">
+						<div class="row">
+							<div class="col-12">
+								<div class="input-group input-group-sm">
+									<div class="input-group-prepend">
+										<span class="input-group-text">Province Regione</span>
+									</div>
+									<select class="form-control" id="region" >
+										<option th:each="region : ${regions}" th:value="${region.code}" th:text="${region.desc}"></option>
+									</select>
+								</div>
+							</div>
+						</div>
+						<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
+						<div class="row" id="rowProvince"></div>
+						<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>	
 					</div>
-					<select class="form-control" id="region" >
-						<option th:each="region : ${regions}" th:value="${region.code}" th:text="${region.desc}"></option>
-					</select>
+					<div class="col-lg-12 col-xl-8">
+						<canvas id="chartProvince"></canvas>
+					</div>
 				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
-		<div class="row" id="rowProvince"></div>
-		<div class="row">
-			<div class="col-lg-12 col-xl-8">
-				<canvas id="chartProvince"></canvas>
 			</div>
 		</div>
 	</div>
