--- a/src/main/resources/templates/fragments/tabRegionData.html
+++ b/src/main/resources/templates/fragments/tabRegionData.html
@@ -7,32 +7,37 @@
 
 <div class="tab-pane fade" id="nav-region" role="tabpanel" aria-labelledby="nav-profile-tab">
 	<div class="container-fluid">
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
-			<div class="col-12">
-				&nbsp;
+			<div class="col-12 d-flex justify-content-center">
+				<h5>Dati a livello Regionale</h5>
 			</div>
 		</div>
-		<div class="row" id="regionInfoType">
-			<div class="col-lg-12 col-xl-8">
-				<div class="input-group input-group-sm">
-					<div class="input-group-prepend">
-						<span class="input-group-text">Tipo Informazioni</span>
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
+		<div class="row">
+			<div class="col-12">
+				<div class="row">
+					<div class="col-lg-12 col-xl-4">
+						<div class="row"  id="regionInfoType">
+							<div class="col-12">
+								<div class="input-group input-group-sm">
+									<div class="input-group-prepend">
+										<span class="input-group-text">Tipo Informazioni</span>
+									</div>
+									<select class="form-control" id="covidData" >
+										<option th:each="cdata : ${covidDataType}" th:value="${cdata.key}" th:text="${cdata.value}"></option>
+									</select>
+								</div>
+							</div>
+						</div>
+						<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
+						<div class="row" id="rowRegionsCheckboxes"></div>
+						<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>	
 					</div>
-					<select class="form-control" id="covidData" >
-						<option th:each="cdata : ${covidDataType}" th:value="${cdata.key}" th:text="${cdata.value}"></option>
-					</select>
+					<div class="col-lg-12 col-xl-8">
+						<canvas id="chartRegions"></canvas>
+					</div>
 				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
-		<div class="row" id="rowRegionsCheckboxes"></div>
-		<div class="row">
-			<div class="col-lg-12 col-xl-8">
-				<canvas id="chartRegions"></canvas>
 			</div>
 		</div>
 	</div>
