--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -6,79 +6,59 @@
 -->
 <div class="tab-pane fade" id="nav-vaccines" role="tabpanel" aria-labelledby="nav-vaccines-tab">
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
 			<div class="col-12 d-flex justify-content-center">
 				<h5>Vaccini consegnati alle Regioni</h5>
 			</div>
 		</div>
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
 			<div class="col-12">
-				&nbsp;
+				<div class="row">
+					<div class="col-lg-12 col-xl-4">
+						<div class="row" id="rowRegionVaccines"></div>
+						<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>			
+					</div>
+					<div class="col-lg-12 col-xl-8">
+						<canvas id="chartVaccinesDelivered"></canvas>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="row" id="rowRegionVaccines"></div>
-		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12 col-xl-8">
-				<canvas id="chartVaccinesDelivered"></canvas>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
 			<div class="col-12 d-flex justify-content-center">
 				<h5>Persone Vaccinate</h5>
 			</div>
 		</div>
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
 			<div class="col-12">
-				&nbsp;
+				<div class="row">
+					<div class="col-lg-12 col-xl-4">
+						<div class="row" id="vaccinesGivenCheckboxes"></div>
+						<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>	
+					</div>
+					<div class="col-lg-12 col-xl-8">
+						<canvas id="chartVaccinesGiven"></canvas>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="row" id="vaccinesGivenCheckboxes"></div>
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12 col-xl-8">
-				<canvas id="chartVaccinesGiven"></canvas>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12 col-lg-6 col-xl-4">
+			<div class="col-md-12 col-lg-6 col-xl-6">
 				<canvas id="chartVaccinesSuppliers"></canvas>
 			</div>
-			<div class="col-md-12 col-lg-6 col-xl-4">
+			<div class="col-md-12 col-lg-6 col-xl-6">
 				<canvas id="chartVaccinesDoses"></canvas>
 			</div>
-			<div class="col-md-12 col-lg-6 col-xl-4">
+			<div class="col-md-12 col-lg-6 col-xl-6">
 				<canvas id="chartVaccinesPerAge"></canvas>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 	</div>
 </div>
 
