Adding the total tab

--- a/src/main/resources/templates/fragments/importJs.html
+++ b/src/main/resources/templates/fragments/importJs.html
@@ -25,6 +25,8 @@
 <script th:src="@{/js/DeliveredVaccinesChart.js?v=} + ${appVersion}"></script>
 <script th:src="@{/js/VaccinesDoseChart.js?v=} + ${appVersion}"></script>
 <script th:src="@{/js/VaccinesPerAgeChart.js?v=} + ${appVersion}"></script>
+<script th:src="@{/js/TotalDeliveredUsedVaccinesChart.js?v=} + ${appVersion}"></script>
+<script th:src="@{/js/TotalDeliveredUsedVaccinesPerRegionChart.js?v=} + ${appVersion}"></script>
 
 <!--
 ****************************************************************************
