--- a/src/main/resources/templates/fragments/importJs.html
+++ b/src/main/resources/templates/fragments/importJs.html
@@ -27,6 +27,7 @@
 <script th:src="@{/js/VaccinesPerAgeChart.js?v=} + ${appVersion}"></script>
 <script th:src="@{/js/TotalDeliveredUsedVaccinesChart.js?v=} + ${appVersion}"></script>
 <script th:src="@{/js/TotalDeliveredUsedVaccinesPerRegionChart.js?v=} + ${appVersion}"></script>
+<script th:src="@{/js/TotalGivenVeccinesPerAge.js?v=} + ${appVersion}"></script>
 
 <!--
 ****************************************************************************
