--- a/src/main/resources/templates/fragments/tabTotals.html
+++ b/src/main/resources/templates/fragments/tabTotals.html
@@ -15,11 +15,14 @@
 		</div>
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
+			<div class="col-md-12 col-lg-6 col-xl-4">
+				<canvas id="chartTotalsVaccinesUsedDelivered"></canvas>
+			</div>
 			<div class="col-md-12 col-lg-12 col-xl-8">
 				<canvas id="chartTotalsVaccinesUsedDeliveredPerRegion"></canvas>
 			</div>
-			<div class="col-md-12 col-lg-6 col-xl-4">
-				<canvas id="chartTotalsVaccinesUsedDelivered"></canvas>
+			<div class="col-md-12 col-lg-12 col-xl-8">
+				<canvas id="chartTotalsVaccinesGivenPerAge"></canvas>
 			</div>
 		</div>
 	</div>
