--- a/src/main/resources/templates/fragments/tabTotals.html
+++ b/src/main/resources/templates/fragments/tabTotals.html
@@ -24,6 +24,9 @@
 			<div class="col-md-12 col-lg-12 col-xl-8">
 				<canvas id="chartTotalsVaccinesGivenPerAge"></canvas>
 			</div>
+			<div class="col-md-12 col-lg-6 col-xl-4">
+				<canvas id="chartTotalsVaccinesDeliveredPerSupplier"></canvas>
+			</div>
 		</div>
 	</div>
 </div>
