--- a/src/main/resources/templates/fragments/infoModal.html
+++ b/src/main/resources/templates/fragments/infoModal.html
@@ -15,11 +15,11 @@
 			</div>
 			<div class="modal-body">
 				<p>
-					Ho deciso di creare questo sito per visualizzare i dati del COVID-19 in Italia con l'aiuto di alcuni grafici.
+					Ho creato questo sito per visualizzare i dati del COVID-19 in Italia con l'aiuto di alcuni grafici.
 				</p>
 				<p>
-					I dati li recupero direttametne dal sito del Ministero della Salute e vengono aggiornati automaticamente
-					non appena il Ministero rilascia i "nuovi numeri", <b>di solito tra le 17:00 e le 18:00 di ogni giorno.</b>
+					I dati provengono dal Ministero Della Salute, questo sito controlla ad ogni ora se ci sono aggiornamenti disponibili.
+				    <b>(Il ministero solitamente rilascia gli aggiornamenti tra le 17:00 e le 18:00 di ogni giorno )</b>
 				</p>
 				<ul>
 					<li>
@@ -28,8 +28,14 @@
 					<li>
 						Dati del Ministero della Salute
 						<ul>
-							<li><a href="https://github.com/pcm-dpc/COVID-19" target="_blank">Dati Virus</a></li>
-							<li><a href="https://github.com/italia/covid19-opendata-vaccini" target="_blank">Dati Vaccini</a></li>
+							<li>
+								<a href="https://github.com/pcm-dpc/COVID-19" target="_blank">Dati Virus</a>
+								<a href="http://www.salute.gov.it/portale/nuovocoronavirus/dettaglioContenutiNuovoCoronavirus.jsp?lingua=italiano&id=5351&area=nuovoCoronavirus&menu=vuoto" target="_blank">(Grafici Governo)</a>
+							</li>
+							<li>
+								<a href="https://github.com/italia/covid19-opendata-vaccini" target="_blank">Dati Vaccini</a>
+								<a href="https://www.governo.it/it/cscovid19/report-vaccini/" target="_blank">(Grafici Governo)</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
