Finalising the changes for the addtional info

--- a/src/main/resources/templates/fragments/infoModal.html
+++ b/src/main/resources/templates/fragments/infoModal.html
@@ -38,6 +38,9 @@
 							</li>
 						</ul>
 					</li>
+					<li>
+                        <a href="http://dati.istat.it/Index.aspx?QueryId=42869" style="" target="_blank">Dati ISTAT (Popolazione)</a>
+                    </li>
 				</ul>
 			</div>
 			<div class="modal-footer">
