Mono dose vaccines

--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -29,7 +29,7 @@
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
 			<div class="col-12 d-flex justify-content-center">
-				<h5>Persone Vaccinate</h5>
+				<h5>Numero Somminitrazioni</h5>
 			</div>
 		</div>
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
