updates to allign with government changes

--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -26,6 +26,10 @@
 				</div>
 			</div>
 		</div>
+		<!-- 
+		These data are not available anymore in the goverment repo. I will keep the code here just for reference, or in case they
+        change their mind and restore these info
+        
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
 			<div class="col-12 d-flex justify-content-center">
@@ -46,6 +50,7 @@
 				</div>
 			</div>
 		</div>
+		-->
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
 			<div class="col-md-12 col-lg-6 col-xl-6">
