adding a new chart

--- a/src/main/resources/templates/fragments/tabTotals.html
+++ b/src/main/resources/templates/fragments/tabTotals.html
@@ -15,6 +15,9 @@
 		</div>
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
+			<div class="col-md-12 col-lg-12 col-xl-6">
+                <canvas id="vaccinatedPerRegion"></canvas>
+            </div>
 		    <div class="col-md-12 col-lg-12 col-xl-6">
                 <canvas id="firstDosePerc"></canvas>
             </div>
