small UI changes

--- a/src/main/resources/templates/fragments/tabNationalData.html
+++ b/src/main/resources/templates/fragments/tabNationalData.html
@@ -5,7 +5,7 @@
 ****************************************************************************
 -->
 
-<div class="tab-pane fade show active" id="nav-national" role="tabpanel" aria-labelledby="nav-home-tab">
+<div class="tab-pane fade" id="nav-national" role="tabpanel" aria-labelledby="nav-home-tab">
 	<div class="container-fluid">
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
