--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,22 +71,7 @@
 					</label>
 				</div>
 			</div>
-			<div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-				<div class="input-group input-group-sm">
-					<label>Ultimo Aggiornamento: <span id="lastUpdateTime"></span></label>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">&nbsp;</div>
-		</div>
-		<div class="row" id="divRefreshWarning" style="display: none;">
-			<div class="col">
-				<div class="alert alert-warning" role="alert">
-					<i class="fa fa-refresh fa-spin"></i>
-					Sincronizzazione dei dati con il ministero della salute in corso, si prega di attendere pochi minuti, grazie
-					<i class="fa fa-refresh fa-spin"></i>
-				</div>
+			<div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-3" id="divLastUpdate">
 			</div>
 		</div>
 		<div class="row">
