--- a/src/main/resources/templates/fragments/tabTotals.html
+++ b/src/main/resources/templates/fragments/tabTotals.html
@@ -15,16 +15,16 @@
 		</div>
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
-		    <div class="col-md-12 col-lg-12 col-xl-6">
+		    <div class="col-md-12 col-lg-12 col-xl-6 chart-min-height">
                 <canvas id="firstDosePerc"></canvas>
             </div>
-			<div class="col-md-12 col-lg-12 col-xl-6">
+			<div class="col-md-12 col-lg-12 col-xl-6 chart-min-height">
                 <canvas id="vaccinatedPerRegion"></canvas>
             </div>
-			<div class="col-md-12 col-lg-12 col-xl-6">
+			<div class="col-md-12 col-lg-12 col-xl-6 chart-min-height">
 				<canvas id="chartTotalsVaccinesGivenPerAge"></canvas>
 			</div>
-			<div class="col-md-12 col-lg-12 col-xl-6">
+			<div class="col-md-12 col-lg-12 col-xl-6 chart-min-height">
 				<canvas id="chartTotalsVaccinesUsedDeliveredPerRegion"></canvas>
 			</div>
 			<div class="col-md-12 col-lg-6 col-xl-6">
