--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -56,10 +56,10 @@
 			<div class="col-md-12 col-lg-6 col-xl-6">
 				<canvas id="chartVaccinesSuppliers"></canvas>
 			</div>
-			<div class="col-md-12 col-lg-6 col-xl-6">
+			<div class="col-md-12 col-lg-6 col-xl-6 chart-min-height">
 				<canvas id="chartVaccinesDoses"></canvas>
 			</div>
-			<div class="col-md-12 col-lg-12 col-xl-8">
+			<div class="col-md-12 col-lg-12 col-xl-8 chart-min-height">
 				<canvas id="chartVaccinesPerAge"></canvas>
 			</div>
 		</div>
