--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -53,7 +53,7 @@
 		-->
 		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
 		<div class="row">
-			<div class="col-md-12 col-lg-6 col-xl-6">
+			<div class="col-md-12 col-lg-6 col-xl-6 chart-min-height">
 				<canvas id="chartVaccinesSuppliers"></canvas>
 			</div>
 			<div class="col-md-12 col-lg-6 col-xl-6 chart-min-height">
