minor ui improvements

--- a/src/main/resources/templates/fragments/infoModal.html
+++ b/src/main/resources/templates/fragments/infoModal.html
@@ -29,7 +29,7 @@
 						Dati del Ministero della Salute
 						<ul>
 							<li>
-								<a href="https://github.com/pcm-dpc/COVID-19" target="_blank">Dati Virus</a>
+								<a href="https://github.com/pcm-dpc/COVID-19" target="_blank">Dati infezioni</a>
 								<a href="http://www.salute.gov.it/portale/nuovocoronavirus/dettaglioContenutiNuovoCoronavirus.jsp?lingua=italiano&id=5351&area=nuovoCoronavirus&menu=vuoto" target="_blank">(Grafici Governo)</a>
 							</li>
 							<li>
@@ -38,9 +38,11 @@
 							</li>
 						</ul>
 					</li>
+					<!-- 
 					<li>
                         <a href="http://dati.istat.it/Index.aspx?QueryId=42869" style="" target="_blank">Dati ISTAT (Popolazione)</a>
                     </li>
+					 -->
 				</ul>
 			</div>
 			<div class="modal-footer">
