--- a/src/main/resources/templates/fragments/tabTotals.html
+++ b/src/main/resources/templates/fragments/tabTotals.html
@@ -19,6 +19,12 @@
                 <canvas id="firstDosePerc"></canvas>
             </div>
             <div class="col-md-12 col-lg-12 col-xl-6">
+		<div th:replace="fragments/generic.html::emptyBootstrapRow"></div>
+		<div class="row">
+			<div class="col-12 d-flex justify-content-center">
+				<b>Totale infezioni</b>
+			</div>
+		</div>
             	<div class="row" id="totalInfectionsCheckBoxes">
             	</div>
             	<div class="row">
