--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -84,7 +84,7 @@
 			<a class="nav-item nav-link"		id="nav-national-tab"	data-toggle="tab" href="#nav-national"	role="tab" aria-controls="nav-national" 	aria-selected="false">Infezioni Nazionali</a>
 			<a class="nav-item nav-link"		id="nav-region-tab"		data-toggle="tab" href="#nav-region"	role="tab" aria-controls="nav-region"		aria-selected="false">Regionali</a>
 			<a class="nav-item nav-link"		id="nav-province-tab"	data-toggle="tab" href="#nav-province"	role="tab" aria-controls="nav-province" 	aria-selected="false">Provinciali</a>
-			<a class="nav-item nav-link"		id="nav-region-map-tab"	data-toggle="tab" href="#nav-region-map"role="tab" aria-controls="nav-region-map" 	aria-selected="false">Mappa</a>
+			<!-- <a class="nav-item nav-link"		id="nav-region-map-tab"	data-toggle="tab" href="#nav-region-map"role="tab" aria-controls="nav-region-map" 	aria-selected="false">Mappa</a> -->
 			<a class="nav-item nav-link"		id="nav-vaccines-tab"	data-toggle="tab" href="#nav-vaccines"	role="tab" aria-controls="nav-vaccines" 	aria-selected="false">Vaccini</a>
 		</div>
 	</nav>
@@ -93,7 +93,7 @@
 		<div th:replace="fragments/tabNationalData.html::tabNationalData"></div>
 		<div th:replace="fragments/tabRegionData.html::tabRegionData"></div>
 		<div th:replace="fragments/tabProvinceData.html::tabProvinceData"></div>
-		<div th:replace="fragments/tabItalianMap.html::tabItalianMap"></div>
+		<!-- <div th:replace="fragments/tabItalianMap.html::tabItalianMap"></div> -->
 		<div th:replace="fragments/tabVaccines.html::tabVaccinesBody"></div>
 	</div>
 	<div class="accordion" id="divAccordion">
